The option "show_abbrevs" supersedes the former print mode
"no_abbrevs" with inverted meaning.

* More systematic naming of some configuration options.
INCOMPATIBILTY.

  trace_simp  ~>  simp_trace
  debug_simp  ~>  simp_debug

* Support for real valued configuration options, using simplistic
floating-point notation that coincides with the inner syntax for
float_token.


*** Pure ***

* Support for real valued preferences (with approximative PGIP type).

* Interpretation command 'interpret' accepts a list of equations like
'interpretation' does.

* Diagnostic command 'print_interps' prints interpretations in proofs
in addition to interpretations in theories.

* Discontinued obsolete 'global' and 'local' commands to manipulate
the theory name space.  Rare INCOMPATIBILITY.  The ML functions
Sign.root_path and Sign.local_path may be applied directly where this
feature is still required for historical reasons.

* Discontinued obsolete 'constdefs' command.  INCOMPATIBILITY, use
'definition' instead.

* Document antiquotations @{class} and @{type} print classes and type
constructors.

* Document antiquotation @{file} checks file/directory entries within
the local file system.


*** HOL ***

* Quickcheck now by default uses exhaustive testing instead of random
testing.  Random testing can be invoked by quickcheck[random],
exhaustive testing by quickcheck[exhaustive].

* Quickcheck instantiates polymorphic types with small finite
datatypes by default. This enables a simple execution mechanism to
handle quantifiers and function equality over the finite datatypes.

* Functions can be declared as coercions and type inference will add
them as necessary upon input of a term. In theory Complex_Main,
real :: nat => real and real :: int => real are declared as
coercions. A new coercion function f is declared like this:

  declare [[coercion f]]

To lift coercions through type constructors (eg from nat => real to
nat list => real list), map functions can be declared, e.g.
